--- a/app/assets/stylesheets/users_profile.css.scss
+++ b/app/assets/stylesheets/users_profile.css.scss
@@ -1,3 +1,7 @@
+.users_profile_container label{
+  display: inline;
+}
+
 .profile_title_box {
   margin: 10px 0px 0px 0px;
   padding: 10px;
@@ -35,24 +39,42 @@
   background-color: #474f50;
 }
 
+
+
 #users_profile_container_right{
 
   float:right;
-  width:395px;
-  background-color: #39b54a;
+  width:295px;
+  text-align: center;
+  margin: 50px 50px;
 }
+
+#users_profile_container_right_top{
+
+  border-width: 25px 35px 35px 35px;
+  border-style: solid;
+  border-color:  #474f50;
+  background-color: #474f50;
+
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 12px;
+  font-weight: lighter;
+}
+
 
 #users_profile_container_left{
 
+  padding: 30px 0px;
   float:left;
   width:540px;
-  background-color: #0077b3;
   border-color: #e2e2e2;
   border-width:2px;
   border-right-style:solid;
   text-align: right;
 
 }
+
 #users_profile_container_left input[type="text"]{
 
   margin: 10px 100px 10px 10px;
@@ -65,20 +87,28 @@
 
 }
 
-#users_profile_container_left select{
-  //width: 102px;
-}
+
 #users_profile_birthday_3i{
   margin: 10px 100px 10px 2px;
   width: 100px;
 }
-#users_profile_birthday_1i, #users_profile_birthday_2i {
+#users_profile_birthday_1i {
+  width: 100px;
+  margin: 10px 2px 10px 8px;
+}
+
+#users_profile_birthday_2i {
   width: 100px;
   margin: 10px 2px 10px 2px;
 }
+
 #users_profile_gender
  {
   width: 315px;
   margin: 10px 100px 10px 10px;
+}
+
+.clear{
+  clear:  both;
 }
 
