--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,8 +15,8 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li><%= link_to "My Room", room_rooms_path(current_user.username) %></li>
-                  <li><%= link_to "Profile", show_users_profiles_by_user_id_path(current_user.id) %></li>
-                  <li><%= link_to "Settings", current_user %></li>
+                  <li><%= link_to "Profile", edit_users_profiles_by_user_id_path(current_user.id) %></li>
+                  <li><%= link_to "Settings", edit_user_path(current_user.id)  %></li>
 
                   <li class="divider"></li>
                   <li>
