--- a/app/views/users_photos/index_users_photos_by_user_id.html.erb
+++ b/app/views/users_photos/index_users_photos_by_user_id.html.erb
@@ -23,9 +23,9 @@
         <td>
 
           <% if users_photo.image_name.blank?  %>
-              <%= cl_image_tag "default_image_all.png",width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+              <%= cl_image_tag "default-user.png",width:100 , height:100,:crop => :fit,:default_image => "default-user.png" %>
           <% else %>
-              <%= cl_image_tag users_photo.image_name,width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+              <%= cl_image_tag users_photo.image_name,width:100 , height:100,:crop => :fit,:default_image => "default-user.png" %>
           <% end %>
 
 
