Bookmarks Large View button says "Add It" instead of "Try in my room." Reference to mousewheelOn deleted.

--- a/app/assets/stylesheets/room_profile_requests.css.scss
+++ b/app/assets/stylesheets/room_profile_requests.css.scss
@@ -83,7 +83,7 @@ p.profile_friend_username{
   width:70px;
   height:23px;
 }
-.profile_request_deny,.profile_key_requested{
+.profile_request_deny,.profile_key_requested, .profile_large_item_tried_it{
   font-size:15px;
   background-color:#e2e2e2;
   color:#464646;
