--- a/app/assets/stylesheets/rooms_bookmarks.css.scss
+++ b/app/assets/stylesheets/rooms_bookmarks.css.scss
@@ -147,7 +147,7 @@ ul.bookmark_menu_list {
   position:absolute;
   bottom:0;
   left:0;
-  border:2px solid #7d7d7d;
+  border:none;/*2px solid #7d7d7d;*/
   border-radius:100%;
 }
 .my_bookmarks_bookmark_name_form, .discover_bookmark_name_form{
