--- a/app/assets/stylesheets/rooms_bookmarks.css.scss
+++ b/app/assets/stylesheets/rooms_bookmarks.css.scss
@@ -6,11 +6,12 @@
 }
 .bookmark_menu{
   position:fixed;
-  width:240px;
+  // width:240px;
   background-color: rgba(0,0,0,.8);
   height:100%;
   padding:10px;
   float:left;
+  width:20%;
 }
 .bottom_border_padding{
   padding-bottom:10px;
@@ -84,7 +85,7 @@ ul.bookmark_menu_list {
 }
 .custom_bookmark_confirm_add_wrap{
   display:none;
-  text-align:center;
+  padding-left:40px;
 }
 .custom_bookmark_confirm_add_wrap img{
   width:150px;
@@ -103,7 +104,9 @@ ul.bookmark_menu_list {
   color:#333333;
   position:fixed;
   top:45px;
-  left:250px;
+  // left:250px;
+  left:20%;
+  width:80%;
 }
 .my_bookmarks_top, .discover_bookmarks_top{
   padding:20px 20px 0px;
@@ -267,6 +270,9 @@ div.just_added img{
   text-align:center;
   border-radius:3px;
 }
+#add_your_own_box .save_site_button{
+  width:150px;
+}
 .preview_mode_save_button {
   width:80%;
 }
@@ -292,54 +298,54 @@ div.just_added img{
 .custom_url_saved{
   display:none;
   margin: 0 3em;
-  width:130px;
+  width:150px;
 }
 /*END Bookmarks Preview Mode*/
 /*Bookmarks Media Queries*/
 
   /*Height MQ*/
-@media screen and (max-height:675px){
-  .custom_bookmark_confirm_add_wrap img{
-  width:130px;
-  height:130px;
-  }
-  .bookmark_menu_list li{
-    padding:2px 0;
-  }
-  #discover_submenu_list{
-    padding-bottom:1em;
-  }
-}
-@media screen and (max-height:625px){
-  .custom_bookmark_confirm_add_wrap img{
-  width:100px;
-  height:100px;
-  padding: 0 1em 4px;
-  }
-}
-@media screen and (max-height:580px){
-  .custom_bookmark_confirm_add_wrap img{
-    width:50px;
-    height:50px;
-  }
-}
-@media screen and (max-height:475px){
-  .discover_submenu_section{
-    height:300px;
-    overflow-y:scroll;
-  }
-}@media screen and (max-height:451px){
-  #discover_submenu_list{
-    display:none;
-  }
-}
-   /*Width MQ*/
-@media screen and (max-width:1280px){
-  .bookmark_grid_item{
-    width:160px;
-    height:180px;
-  }
-  .bookmark_grid_item .gridItemPicture{
-    width:160px;
-  }
-}
+// @media screen and (max-height:675px){
+//   .custom_bookmark_confirm_add_wrap img{
+//   width:130px;
+//   height:130px;
+//   }
+//   .bookmark_menu_list li{
+//     padding:2px 0;
+//   }
+//   #discover_submenu_list{
+//     padding-bottom:1em;
+//   }
+// }
+// @media screen and (max-height:625px){
+//   .custom_bookmark_confirm_add_wrap img{
+//   width:100px;
+//   height:100px;
+//   padding: 0 1em 4px;
+//   }
+// }
+// @media screen and (max-height:580px){
+//   .custom_bookmark_confirm_add_wrap img{
+//     width:50px;
+//     height:50px;
+//   }
+// }
+// @media screen and (max-height:475px){
+//   .discover_submenu_section{
+//     height:300px;
+//     overflow-y:scroll;
+//   }
+// }@media screen and (max-height:451px){
+//   #discover_submenu_list{
+//     display:none;
+//   }
+// }
+//    /*Width MQ*/
+// @media screen and (max-width:1280px){
+//   .bookmark_grid_item{
+//     width:160px;
+//     height:180px;
+//   }
+//   .bookmark_grid_item .gridItemPicture{
+//     width:160px;
+//   }
+// }
