--- a/app/assets/stylesheets/users_photos.css.scss
+++ b/app/assets/stylesheets/users_photos.css.scss
@@ -1,4 +1,90 @@
 // Place all the styles related to the UsersPhotos controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+$user_photos_header_width: 1000px;
+$users_photos_large_viewBGColor: #f3f3f3;
+$users_photos_listWidth:600px;
+$users_photos_large_viewWidth: 384px;
 
+#users_photos_container{
+  
+}
+.users_photos_header h1{
+  font-weight: lighter;
+  font-size: 21pt;
+  color: #343434;
+  margin: 0 5px;
+  line-height:30px;
+}
+.users_photos_header{
+  width: $user_photos_header_width;
+  border-bottom: 1px solid #d2d2d2;
+  margin-bottom:10px;
+}
+/*Layout Pattern from http://matthewjamestaylor.com/blog/equal-height-columns-2-column.htm*/
+
+/*Container 1 - Inner Wrap*/
+.user_photos_content_wrap1{
+  width: $user_photos_header_width;
+  border-right: 2px solid #d2d2d2;
+  background-color: white;
+  float: left;
+  position: relative;
+  right: $users_photos_large_viewWidth;
+
+}
+
+/*Container 2- Outermost Wrap*/
+.user_photos_content_wrap2{
+    border: 1px solid #d2d2d2;
+    border-radius: 3px;
+    float: left;
+    width: $user_photos_header_width;
+    background-color: $users_photos_large_viewBGColor;
+    overflow: hidden;
+    position: relative;
+    left: 0;
+}
+
+/*Column 1*/
+#users_photos_container .gridItemList{
+  width: $users_photos_listWidth;
+  border: 1px dashed green;
+  float: left;
+  position: relative;
+  left: $users_photos_large_viewWidth;
+}
+
+/*Column 2*/
+.users_photos_large_view{
+  text-align:center;
+  
+  width: $users_photos_large_viewWidth;
+  overflow:hidden;
+  margin:0;
+  padding:0;
+  position:relative;
+  left: 400px ;/*$users_photos_large_viewWidth because Header width is 1000px, there's a 16px gap that will be padding.;*/
+  float:left;
+
+}
+
+.users_photos_large_view h2{
+  color: #343434;
+  font-size: 16pt;
+  font-weight: lighter;
+  margin: 2em 0 0 5px;
+}
+.users_photos_large_view img{
+  margin: 15px 0;
+}
+.users_photos_large_view hr{
+  width: 300px;
+  border: 0;
+  border-top: 1px solid #d2d2d2;
+  margin: auto;
+  margin-bottom: 15px;
+}
+.users_photos_large_view p{
+  margin: 15px;
+}
