--- a/app/views/users_photos/index_users_photos_by_user_id.html.erb
+++ b/app/views/users_photos/index_users_photos_by_user_id.html.erb
@@ -1,8 +1,32 @@
 <div id="users_photos_container">
 
-<h1>Listing users_photos</h1>
+  <div class="users_photos_header">
+    <h1>MY PHOTOS</h1>
+  </div>
 
-<%= link_to 'New Users photo', new_users_photos_by_user_id_path(@photos_user.id),method: :get  %>
+  <%= link_to 'New Users photo', new_users_photos_by_user_id_path(@photos_user.id),method: :get  %>
+
+  <div class="user_photos_content_wrap2">
+    <div class = "user_photos_content_wrap1">
+
+      <div class="gridItemList">
+      Photos go here. 
+        <p>Add square at the end</p>
+      </div>
+
+      <div class="users_photos_large_view">
+        <h2>Photo Description</h2>
+        <hr>
+        <img src="http://placekitten.com/250/250">
+        <a href="#"><p>Set as Profile Image</p></a>
+      </div>
+
+    </div>
+  </div>
+
+</div>
+
+
 
   <table class="table table-bordered">
   <tr>
