--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -52,7 +52,7 @@
 
     <td><%= bookmark.id %></td>
 
-    <td ><%= bookmark.bookmark_url %></td>
+    <td><%= bookmark.bookmark_url[0,50] %></td>
     <td><%= bookmark.title %></td>
     <td><%= bookmark.i_frame %></td>
     <td>
