--- a/app/views/rooms/room.html.erb
+++ b/app/views/rooms/room.html.erb
@@ -13,9 +13,9 @@
   <div id="xroom_scroll_right">   </div>
 
   <div id="xroom">
-    <div id="xroom_items_0" data-current_screen_position= '0'>    </div>
-    <div id="xroom_items_1" data-current_screen_position= '1'>    </div>
-    <div id="xroom_items_2" data-current_screen_position= '2'>    </div>
+    <div id="xroom_items_0">    </div>
+    <div id="xroom_items_1">    </div>
+    <div id="xroom_items_2">    </div>
   </div>
 
 
