--- a/app/assets/stylesheets/users_photos.css.scss
+++ b/app/assets/stylesheets/users_photos.css.scss
@@ -1,7 +1,7 @@
 // Place all the styles related to the UsersPhotos controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-$user_photos_header_width: 1000px;
+$user_photos_header_width: 989px;
 $users_photos_large_viewBGColor: #f3f3f3;
 $users_photos_listWidth:600px;
 $users_photos_large_viewWidth: 384px;
@@ -17,7 +17,7 @@ $users_photos_large_viewWidth: 384px;
   line-height:30px;
 }
 .users_photos_header{
-  width: $user_photos_header_width;
+  width:1000px ;//$user_photos_header_width
   border-bottom: 1px solid #d2d2d2;
   margin-bottom:10px;
   padding-bottom: 5px;
@@ -66,20 +66,24 @@ $users_photos_large_viewWidth: 384px;
   margin:0;
   padding:0;
   position:relative;
-  left: 400px ;/*$users_photos_large_viewWidth because Header width is 1000px, there's a 16px gap that will be padding.;*/
+  left: 384px ;/*$users_photos_large_viewWidth because Header width is 1000px, there's a 16px gap that will be padding.;*/
   float:left;
 
 }
+.users_photos_large_view div{
+  width:250px;
+  height:250px;
+  margin:auto;
+  position:relative;
 
+}
 .users_photos_large_view h2{
   color: #343434;
   font-size: 16pt;
   font-weight: lighter;
   margin: 2em 0 0 5px;
 }
-.users_photos_large_view img{
-  margin: 15px 0;
-}
+
 .users_photos_large_view hr{
   width: 300px;
   border: 0;
@@ -104,8 +108,13 @@ $users_photos_large_viewWidth: 384px;
   height:180px;
   margin:8px;
 }
+.users_photo_item:hover{
+  .user_photos_menu{
+    display:block;
+  }
 
-.users_photo_item img{
+}
+.users_photo_item img,.users_photos_large_view img{
   position:absolute;
   top:0;
   bottom:0;
@@ -150,10 +159,22 @@ $users_photos_large_viewWidth: 384px;
   color:white;
   font-size:14px;
   font-weight:normal;
-  margin-bottom: -18px; /*To offset picture padding on top row*/
+  margin-bottom: 9px; /*To offset picture padding on top row*/
   position:relative;
 }
 #upload_new_photo_button img{
   padding-right:10px;
   padding-bottom:2px;
+}
+.user_photos_menu{
+  position:absolute;
+  top:2px;
+  right:2px;
+  display:none;
+}
+
+/*Bootstrap override*/
+#users_photos_container .dropdown-menu > li > a:hover{
+  background: none;
+  background-color: #00ccff;
 }
