--- a/app/views/users_photos/index_users_photos_by_user_id.html.erb
+++ b/app/views/users_photos/index_users_photos_by_user_id.html.erb
@@ -19,13 +19,33 @@
               
                 <% photo_groups.each do |single_photo|%>
                   <div class="users_photo_item">
+
                     <% if single_photo.image_name.blank? %>
                       <%= cl_image_tag "default-user.png",width:180 , height:180,:crop => :fit,:default_image => "default-user.png" %>
                     
                     <% else %>
                       <%= cl_image_tag single_photo.image_name,width:180 , height:180,:crop => :fit,:default_image => "default-user.png" %>
                     <% end %>
-
+                    <div class="user_photos_menu">
+                      <ul class="nav nav-tabs">
+                        <li class="dropdown">
+                          <a class="dropdown-toggle"
+                             data-toggle="dropdown"
+                             href="#">
+                              <img src="http://res.cloudinary.com/hpdnx5ayv/image/upload/v1383170221/edit-icon.png">
+                              
+                            </a>
+                          <ul class="dropdown-menu">
+                            <li>
+                              <%= link_to 'Set as Profile Picture', update_users_photos_profile_image_by_user_id_by_users_photo_id_path(single_photo.user_id,single_photo.id), method: :put %>
+                            </li>
+                            <li>
+                              <%= link_to 'Delete',destroy_users_photos_by_user_id_by_users_photo_id_path(single_photo.user_id,single_photo.id), method: :delete %>
+                            </li>
+                          </ul>
+                        </li>
+                      </ul>
+                    </div>
                   </div>
                 <%end%>
               
@@ -40,16 +60,15 @@
           </div>
           </div>
         </div>
-        Photos go here. 
-        <p>Add square at the end</p>
-
       </div>
 
       <div class="users_photos_large_view">
         <h2>Photo Description</h2>
         <hr>
-        <img src="http://placekitten.com/250/250">
-        <a href="#"><p>Set as Profile Image</p></a>
+        <div>
+          <%= cl_image_tag @users_profile_photo.image_name,width:250 , height:250,:crop => :fit,:default_image => "default-user.png" %>
+        </div>
+        <%= link_to 'Set a profile image', update_users_photos_profile_image_by_user_id_by_users_photo_id_path(@users_profile_photo.user_id, @users_profile_photo.id), method: :put %>
       </div>
 
     </div>
