--- a/app/assets/stylesheets/users_photos.css.scss
+++ b/app/assets/stylesheets/users_photos.css.scss
@@ -5,13 +5,16 @@ $user_photos_header_width: 989px;
 $users_photos_large_viewBGColor: #f3f3f3;
 $users_photos_listWidth:600px;
 $users_photos_large_viewWidth: 384px;
+$users_photosButtonColor: #00ccff;
+
+/**Index_user_photos_by_user_id **/
 
 #users_photos_container{
   
 }
 .users_photos_header h1{
   font-weight: lighter;
-  font-size: 21pt;
+  font-size: 22px;
   color: #343434;
   margin: 0 5px;
   line-height:30px;
@@ -20,6 +23,7 @@ $users_photos_large_viewWidth: 384px;
   width:1000px ;//$user_photos_header_width
   border-bottom: 1px solid #d2d2d2;
   margin-bottom:10px;
+  margin-top:20px;
   padding-bottom: 5px;
 }
 /*Layout Pattern from http://matthewjamestaylor.com/blog/equal-height-columns-2-column.htm*/
@@ -159,7 +163,7 @@ $users_photos_large_viewWidth: 384px;
   text-align:center;
   padding:5px 15px;
   white-space: nowrap;
-  background-color: #00ccff;
+  background-color: $users_photosButtonColor;
   color:white;
   font-size:14px;
   font-weight:normal;
@@ -180,5 +184,5 @@ $users_photos_large_viewWidth: 384px;
 /*Bootstrap override*/
 #users_photos_container .dropdown-menu > li > a:hover{
   background: none;
-  background-color: #00ccff;
+  background-color: $users_photosButtonColor;
 }
