--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -71,7 +71,9 @@
               <% end %>
 
           <% else %>
-              <li><%= link_to "Sign in", signin_path %></li>
+              <li><%= link_to "Login", signin_path %></li>
+              <li><%= link_to "Sign Up", signup_path %></li>
+
           <% end %>
           <!-- End If -->
 
