--- a/app/views/shop/show_items_design.html.erb
+++ b/app/views/shop/show_items_design.html.erb
@@ -26,6 +26,14 @@
     <br/>
     <br/>
     <br/>
+    <p>
+      <% if @items_design.image_name_logo.blank?  %>
+          <%= cl_image_tag("default_image_all.png", width: 100,height:100,:crop => :fit,:default_image => "default_image_all.png")%>
+      <% else %>
+          <%= cl_image_tag(@items_design.image_name_logo , width: 100,height:100,:crop => :fit,:default_image => "default_image_all.png") %>
+      <% end%>
+
+    </p>
     <h4 class="shop_name" >
       <%= @items_design.name %>
     </h4>
