--- a/app/assets/stylesheets/users_photos.css.scss
+++ b/app/assets/stylesheets/users_photos.css.scss
@@ -85,6 +85,7 @@ $users_photosButtonColor: #00ccff;
   height:250px;
   margin:auto;
   position:relative;
+  margin-bottom:30px;
 
 }
 .users_photos_large_view h2{
