--- a/app/views/users_photos/index_users_photos_by_user_id.html.erb
+++ b/app/views/users_photos/index_users_photos_by_user_id.html.erb
@@ -77,7 +77,7 @@
 
 </div>
 <script type="text/javascript">
-$('#users_photos_container .users_photo_item > img').click(function(event) {
+$('#users_photos_container .users_photo_item:not(users_photo_menu)').click(function(event) {
   //Rerender .users_photos_large_view
   
   //1. Description change
