--- a/app/assets/stylesheets/rooms.css.scss
+++ b/app/assets/stylesheets/rooms.css.scss
@@ -74,3 +74,12 @@
   width: 2200px;
 
 }
+
+#room_design_portrait_pic{
+  width:150px;
+  height:150px;
+  position:absolute;
+  top:10px;
+  left:10px;
+
+}
