Pagination on Profile Friends View works

--- a/app/assets/stylesheets/room_profile.css.scss
+++ b/app/assets/stylesheets/room_profile.css.scss
@@ -54,6 +54,7 @@ nav.profile {
 .profile_home_img_wrap p{
   font-size:11px;
   white-space:nowrap;
+  line-height:15px;
 }
 #profile_home_wrapper figcaption{
   font-size:8px;
