--- a/app/assets/stylesheets/room_profile.css.scss
+++ b/app/assets/stylesheets/room_profile.css.scss
@@ -242,7 +242,7 @@ div.spacer{
   float:left;
   width:460px;
   background: #1d1d1d;
-  margin:1em 0;
+  margin:1em 0 1em 1em;
   color:#f5f5f5
 }
 /*this refers to top section of the profile container */
