--- a/app/assets/stylesheets/rooms_bookmarks.css.scss
+++ b/app/assets/stylesheets/rooms_bookmarks.css.scss
@@ -158,6 +158,11 @@ ul.bookmark_menu_list {
   position:absolute;
   bottom:0;
   margin:0;
+  color: gray;
+  white-space: nowrap;
+  padding-left: 5px;
+  max-width: 145px;
+  overflow: hidden;
 
 }
 .my_bookmarks_bookmark_name_form input, .discover_bookmark_name_form input{
