--- a/app/views/users_profiles/edit_users_profiles_by_user_id.erb
+++ b/app/views/users_profiles/edit_users_profiles_by_user_id.erb
@@ -52,7 +52,7 @@
               <%= f.text_field :description %>
             </div>
             <div class="actions">
-              <%= f.submit "Save Changes", :class => "btn btn-primary"  %>
+              <%= f.submit "Save Changes", :class => "blue_button blue_button_light"  %>
             </div>
         <% end %>
 
