--- a/app/views/shop/show_theme.html.erb
+++ b/app/views/shop/show_theme.html.erb
@@ -2,44 +2,49 @@
   <%= render 'shop_nav' %>
 
   <div class="shop_upper_container" data-shop-type="<%= @entity_type %>">
-    <%= link_to "Let me see it in my room", shop_forward_to_u_room_path(came_from:@came_from,entity_type:@entity_type,entity_id:@theme.id),:class => "btn btn-primary"%>
+    <%= link_to "Let me see it in my room", shop_forward_to_u_room_path(came_from:@came_from,entity_type:@entity_type,entity_id:@theme.id),:class => "blue_button blue_button_light"%>
 
     <a href="#" class="shop_fb_btn"><img src="http://res.cloudinary.com/hpdnx5ayv/image/upload/c_fit,h_21,w_36/v1371241692/facebook.png"></a>
     <a href="#" class="shop_pinterest_btn"><img src="//assets.pinterest.com/images/pidgets/pin_it_button.png"></a>
 
-
     <br/>
     <br/>
     <br/>
     <br/>
   </div>
-  <div class="shop_left">
-    <p>
+  <div class="shop_container_box">
 
-      <% if @theme.image_name_selection.blank?  %>
-          <%= cl_image_tag("default_image_all.png", width: 300,height:300,:crop => :fit,:default_image => "default_image_all.png")%>
-      <% else %>
-          <%= cl_image_tag(@theme.image_name_selection , width: 300,height:300,:crop => :fit,:default_image => "default_image_all.png") %>
-      <% end%>
-    </p>
-  </div>
-  <div class="shop_right">
-    <br/>
-    <br/>
-    <br/>
-    <h4 class="shop_name">
-      <%= @theme.name %>
-    </h4>
-    <p>
-      <b><%= @theme.brand.titlecase unless @theme.brand.nil? %></b>
-    </p>
-    <p class="shop_description">
-      <%= @theme.description %>
-    </p>
+      <div class="shop_left">
+        <p>
 
+          <% if @theme.image_name_selection.blank?  %>
+              <%= cl_image_tag("default_image_all.png", width: 300,height:300,:crop => :fit,:default_image => "default_image_all.png")%>
+          <% else %>
+              <%= cl_image_tag(@theme.image_name_selection , width: 300,height:300,:crop => :fit,:default_image => "default_image_all.png") %>
+          <% end%>
+        </p>
+      </div>
+      <div class="shop_right">
+        <br/>
+        <br/>
+        <br/>
+        <p class="shop_name">
+          <%= @theme.name %>
+        </p>
+        <p>
+          <b><%= @theme.brand.titlecase unless @theme.brand.nil? %></b>
+        </p>
+        <p class="shop_description">
+          <%= @theme.description %>
+        </p>
+
+      </div>
   </div>
 
 </div>
+<div class="clear"></div>
+<br/>
+
 
 
 
