--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -26,7 +26,7 @@
                 <%= f.password_field :password %>
             </div>
             <div class="actions">
-                <%= f.submit "Save changes",class: "btn  btn-primary" %>
+                <%= f.submit "Save Changes",class: "blue_button blue_button_light" %>
             </div>
       <% end %>
 
